# hydraflow

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile.agent  Makefile  README.md  acceptance_criteria.py  agent.py  agent_cli.py  base_background_loop.py  base_runner.py  cli.py  config.py  conflict_prompt.py  dashboard_routes.py  docker_runner.py  escalation_gate.py  events.py  execution.py  hitl_phase.py  hitl_runner.py  implement_phase.py  issue_store.py  makefile_scaffold.py  manifest_refresh_loop.py  memory.py  memory_sync_loop.py  merge_conflict_resolver.py  metrics_manager.py  metrics_sync_loop.py  models.py  orchestrator.py  plan_phase.py  planner.py  post_merge_handler.py  pr_manager.py  pr_unsticker.py  pr_unsticker_loop.py  pyproject.toml  review_phase.py  (+10 more)
.claude/: settings.json
.hydraflow-hook-cache/: pre-commit-0a2009cf538b575a65dee62fc9018f551030759cd0074ad08c4a5d0ff4cf032f  pre-commit-479a684f8ad75185d37e2d9154d33aa83374cf34b953ccf5da1bd8b48c642dd9
.pi/: README.md
docs/: pi-backend-integration-plan.md  self-improving-harness.md
hf_cli/: __main__.py  config.py  supervisor_client.py  supervisor_manager.py  supervisor_service.py  supervisor_state.py
scripts/: bundle_assets.py  docker-smoke-test.sh  ui-npm.sh
src/: __init__.py  adr_reviewer.py  agent.py  agent_cli.py  app_version.py  base_runner.py  ci_scaffold.py  cli.py  config.py  conflict_prompt.py  context_cache.py  dashboard.py  dashboard_routes.py  docker_runner.py  epic.py  events.py  file_util.py  harness_insights.py  hitl_phase.py  implement_phase.py  issue_fetcher.py  issue_store.py  makefile_scaffold.py  manifest.py  manifest_refresh_loop.py  memory.py  memory_sync_loop.py  merge_conflict_resolver.py  metrics_manager.py  model_pricing.py  models.py  orchestrator.py  phase_utils.py  plan_phase.py  planner.py  polyglot_prep.py  ports.py  post_merge_handler.py  pr_manager.py  pr_unsticker.py  (+23 more)
tests/: conftest.py  helpers.py  orchestrator_integration_utils.py  test_acceptance_criteria.py  test_adr_0016_visual_validation_skip_semantics.py  test_adr_0017.py  test_adr_reviewer.py  test_agent.py  test_agent_cli.py  test_base_background_loop.py  test_base_runner.py  test_baseline_policy.py  test_bg_worker_status.py  test_callable_protocols.py  test_ci_scaffold.py  test_cli.py  test_config.py  test_config_core.py  test_config_docker.py  test_config_env.py  test_config_file.py  test_config_file_cli.py  test_config_validation.py  test_conflict_prompt.py  test_context_cache.py  test_credit_pause.py  test_dashboard.py  test_dashboard_routes.py  test_dashboard_routes_control.py  test_dashboard_routes_core.py  test_delta_verifier.py  (+102 more)
(+126 files in other folders)
